comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 <body>
   <main>
     <header>
-      <h1>Título do Site</h1>
+      <h1>Cursos Grátis</h1>
     </header>
     <article>
-      <h2>Artigo 001</h2>
-      <p>Texto Artigo 001</p>
+      <h2>Curso de HTML5 com CSS3</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas quasi suscipit, labore quae cum maiores consectetur veniam, adipisci, aliquam sed atque! Ratione perferendis corporis unde quia quisquam voluptas, doloribus consequatur!
+      Molestias, culpa. Alias eius soluta assumenda, explicabo itaque enim sint tenetur rem aliquid esse quo repellendus ut. Quis corporis distinctio reprehenderit sapiente? Harum, beatae aut excepturi vel et maiores atque?</p>
     </article>
     <article>
-      <h2>Artigo 002</h2>
-      <p>Texto Artigo 002</p>
+      <h2>Curso de Javascript</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates iusto a eius beatae nobis sapiente est laudantium consequuntur maxime, maiores enim explicabo omnis quidem modi atque, dicta tenetur quis vero!</p>
     </article>
   </main>
 </body>
